--- a/.gitmodules
+++ b/.gitmodules
@@ -49,3 +49,6 @@
 [submodule "bundle/vim-qlist"]
 	path = bundle/vim-qlist
 	url = https://github.com/romainl/vim-qlist
+[submodule "pathogen"]
+	path = pathogen
+	url = https://github.com/tpope/vim-pathogen
